@@ -185,7 +185,5 @@ ISABELLE_GHC_VERSION="ghc-9.6.3"
 ISABELLE_GNUPLOT="gnuplot"
 ISABELLE_FONTFORGE="fontforge"
 
-#ISABELLE_MLTON="/usr/bin/mlton"
-#ISABELLE_MLTON_OPTIONS="-pi-style npi"
 #ISABELLE_SMLNJ="/usr/bin/sml"
 #ISABELLE_SWIPL="/usr/bin/swipl"
