@@ -238,6 +238,11 @@ before, not "-new-syntax" (Python-like). Minor INCOMPATIBILITY.
 component javamail (previously javax.mail) from jakarta 2.1.2
 using eclipse angus 2.0.2/2.0.1.
 
+* The MLton compiler has been bundled as Isabelle component, for
+x86_64-linux, x86_64-darwin, arm64-darwin. ISABELLE_MLTON_OPTIONS that
+work most of the time are provided by default, but this may have to be
+overridden (e.g. in $ISABELLE_HOME_USER/etc/settings).
+
 * Update to GHC stack 2.15.1 with support for all platforms, including
 ARM Linux and Apple Silicon.
 
